# pico-examples

pico_w/wifi/: CMakeLists.txt
pico_w/wifi/barcode/: CMakeLists.txt  barcode.c
pico_w/wifi/car_project/: CMakeLists.txt  line_sensor.c
pico_w/wifi/freertos/ping/: CMakeLists.txt  FreeRTOSConfig.h  picow_freertos_ping.c
